<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_login"
    tools:context=".Activity.RegistrationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:cardBackgroundColor="@color/colorBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/sign_up"
                        android:textColor="@android:color/white"
                        android:textSize="25dp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailIdLayout"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextHintColor"
                        android:focusable="false"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailIdInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:hint="@string/email_id"
                            android:backgroundTint="@color/white"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextHintColor"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:backgroundTint="@color/white"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/signUp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:text="@string/signUp_text"
                        android:textColor="@color/colorBackground"
                        android:layout_gravity="center_horizontal"/>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/signUpWithFb"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginRight="10dp"
                            android:text="@string/signUp_with"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/fb_logo"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/signUpWithGoogle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_marginRight="10dp"
                            android:text="@string/signUp_with"/>

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:src="@drawable/google_logo"/>

                    </LinearLayout>



                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</FrameLayout>