<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_image_login"
    tools:context=".Activity.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                app:cardBackgroundColor="@color/green_Daintree"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardUseCompatPadding="true"
                android:layout_gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="20dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login_text"
                        android:textColor="@android:color/white"
                        android:textSize="25sp"/>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/emailIdLayout"
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextHintColor"
                        android:focusable="false"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/emailIdInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:hint="@string/email_id"
                            android:backgroundTint="@color/white"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/passwordLayout"
                        android:layout_marginTop="10dp"
                        android:focusable="false"
                        android:layout_width="match_parent"
                        android:theme="@style/EditTextHintColor"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/passwordInput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:textSize="15sp"
                            android:textColor="@color/white"
                            android:background="@drawable/input_design"
                            android:textColorHint="@color/colorPrimaryDark"
                            android:textStyle="bold"
                            />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:textSize="15sp"
                        android:text="@string/login_text"
                        android:textColor="@color/colorBackground"
                        android:background="@drawable/button_background"
                        android:textAllCaps="false"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/signUpRedirection"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textSize="12sp"
                        android:text="@string/register_redirection"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>




</FrameLayout>